themesセクション手前までコーディング

--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -37,3 +37,26 @@ html(lang="ja")
             a(href="") Contact
           li
             a(href="") Top
+    |<!-- .sp-kv-filter -->
+    button#top-menu.btn.hover
+      span menu
+      .right-line
+      .left-line
+    button#top-reverse.btn.hover
+      img(src="./assets/img/webp/el_parts/top_triangle2.webp", alt="")
+      span Top
+      .right-line
+      .left-line
+    main#top-main.row
+      section.inner
+        h1
+          | Calm ＆ Peace of mind-
+          br
+          | ...and Healing to You.
+        p.lead.side Calmyou(カーミュー)は癒しにつながる様々なジャンルの画像を、オンラインで利用できるデジタルフォトフレームです。日常のほんのひとときに、ささやかな安らぎをあなたにお届けします。
+      | <!-- section.inner -->
+      
+      section#themes.row
+        h2 Themes
+        p.lead.side Calmyouでは癒しにつながる画像のジャンル(テーマ)を、現在、3種類ご用意しています。あなたにとってのお好みのテーマが見つかりますように。
+      | <!-- section#themes.row -->
